Rollback cparse and ready for using submodule

--- a/Test/Test.vcxproj
+++ b/Test/Test.vcxproj
@@ -66,6 +66,9 @@
       <Project>{bead4515-cc5d-4e73-bc71-334859913d06}</Project>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
   <ItemDefinitionGroup />
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
