Optimize code style in model and config

--- a/Test/Test.vcxproj
+++ b/Test/Test.vcxproj
@@ -67,6 +67,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <None Include=".clang-format" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemDefinitionGroup />
